--- a/LeilaoEntrega/LeilaoEntrega/LeilaoEntrega.csproj
+++ b/LeilaoEntrega/LeilaoEntrega/LeilaoEntrega.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gerenciador.cs" />
     <Compile Include="ListaEntrega.cs" />
     <Compile Include="Mapa.cs" />
     <Compile Include="Program.cs" />
